--- a/HTML/Watchlist.html
+++ b/HTML/Watchlist.html
@@ -7,35 +7,41 @@
 	<title>Your watchlist</title>
 </head>
 <body>
-<div ><section class=main><h1 class=secondHeader>
+<header ><h1 class=secondHeader>
 	Your Watchlist:
 </h1>
+
+</header>
  </section>
  <section id= films>
  <div id=Parasite> <img src="../Images/Parasite.jpg" class=poster >
 <div class= textContainer> </div>
-<button id=Parasite >Learn more</button>
+<button id=display >Learn more</button>
 </div>
 <div id=Goodfellas> <img src="../Images/Goodfellas.jpg" class=poster >
 <div class= textContainer> </div>
-<button id=Goodfellas>Learn more</button>
+<button id=display>Learn more</button>
 
 </div>
 <div id=PulpFiction> <img src="../Images/Pulp Fiction.jpg" class=poster >
 <div class= textContainer> </div>
-<button id=PulpFiction>Learn more</button>
+<button id=display>Learn more</button>
 
 </div>
 <div id=Snowpiercer> <img src="../Images/Snowpiercer.jpg" class=poster>
 <div class= textContainer> </div>
-<button id=Snowpiercer>Learn more</button>
+<button id=display>Learn more</button>
 
 </div>
 <div id=Silence> <img src="../Images/Silence.jpg" class=poster >
 <div class= textContainer> </div>
-<button id=Silence>Learn more</button>
+<button id=display>Learn more</button>
 
 </div>
+<footer>
+<button id=add>Add Movie</button>
+</footer>
+
 </section>
 <script src ='../jQuery/code.jquery.com_jquery-3.7.0.js'> </script>
 <script type="text/javascript" src='../main.js'></script>
