added add button

--- a/HTML/Watchlist.html
+++ b/HTML/Watchlist.html
@@ -40,8 +40,8 @@
 </div>
 <footer>
 <button id=add>Add Movie</button>
+<form> <label> Title<input type="text" > </label></form>
 </footer>
-
 </section>
 <script src ='../jQuery/code.jquery.com_jquery-3.7.0.js'> </script>
 <script type="text/javascript" src='../main.js'></script>
