improved display feature and implemented adding feature

--- a/HTML/Watchlist.html
+++ b/HTML/Watchlist.html
@@ -11,38 +11,23 @@
 	Your Watchlist:
 </h1>
 
+<button class=add id=addTop>Display Movie</button>
+
 </header>
  </section>
  <section id= films>
- <div id=Parasite> <img src="../Images/Parasite.jpg" class=poster >
-<div class= textContainer> </div>
-<button id=display >Learn more</button>
-</div>
-<div id=Goodfellas> <img src="../Images/Goodfellas.jpg" class=poster >
-<div class= textContainer> </div>
-<button id=display>Learn more</button>
+ 
 
-</div>
-<div id=PulpFiction> <img src="../Images/Pulp Fiction.jpg" class=poster >
-<div class= textContainer> </div>
-<button id=display>Learn more</button>
 
-</div>
-<div id=Snowpiercer> <img src="../Images/Snowpiercer.jpg" class=poster>
-<div class= textContainer> </div>
-<button id=display>Learn more</button>
-
-</div>
-<div id=Silence> <img src="../Images/Silence.jpg" class=poster >
-<div class= textContainer> </div>
-<button id=display>Learn more</button>
-
-</div>
-<footer>
-<button id=add>Add Movie</button>
-<form> <label> Title<input type="text" > </label></form>
-</footer>
 </section>
+<footer>
+<button  id=addMovie>Add Movie</button>
+<form > <label> Title<input type="text" class= form id='title'> </label>
+ <label> Director<input type="text" class= form id='director' > </label>
+  <label> Length<input type="text"  class= form id='length'> </label>
+   <label> Poster<input type="text"  class= form id='poster'> </label>
+</form>
+</footer>
 <script src ='../jQuery/code.jquery.com_jquery-3.7.0.js'> </script>
 <script type="text/javascript" src='../main.js'></script>
 </body>
