--- a/HTML/landingPage.html
+++ b/HTML/landingPage.html
@@ -14,7 +14,7 @@
 </div>
 <div id= first>
 <img src= '../Images/Parasite.jpg' style="width:30%" class=center>
-<a href='Watchlist.html' id=explore> Explore </a href='Watchlist.html'>
+<a href='Watchlist.html' id=explore> Watchlist </a href='Watchlist.html'>
 </div>
 
 <script src ='../jQuery/code.jquery.com_jquery-3.7.0.js'> </script>
