--- a/HTML/Watchlist.html
+++ b/HTML/Watchlist.html
@@ -24,7 +24,7 @@
 </section>
 <footer>
 <button  id=addMovie>Add Movie</button>
-<form > <label> Title<input type="text" class= form id='title'> </label>
+<form > <label id=txt> Title<input type="text" class= form id='title'> </label>
  <label id=txt> Director<input type="text" class= form id='director' > </label>
   <label id=txt> Length<input type="text"  class= form id='length'> </label>
    <label id=txt> Poster<input type="text"  class= form id='poster'> </label>
